<resources>
    <string name="app_name">YouTubeProject</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="or">or</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_fragment">Profile</string>
    <string name="title_activity_navigation">#SirfMotivation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
</resources>
