<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
  android:background="#000">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="187dp"
            android:layout_height="124dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="92dp"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:src="@drawable/motivation"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="32dp"
            android:textColor="#ffffff"
            android:paddingEnd="32dp"
            android:textColorHint="#8effffff" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:background="@drawable/bubble"
            android:gravity="center_vertical"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:paddingEnd="32dp"
            android:paddingStart="32dp"
            android:textColor="#ffffff"
            android:textColorHint="#8effffff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="92dp"
            android:background="@drawable/bubble_login_button"
            android:gravity="center_vertical"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/sign_up"
            android:textColor="#ffffff"
            android:onClick="LoginScreen"
            android:id="@+id/SignUP"
            android:textColorHint="#8effffff"
            android:textSize="19sp" />
    </LinearLayout>
</FrameLayout>