<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#000">

    <ImageView
        android:layout_width="187dp"
        android:layout_height="124dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:src="@drawable/motivation"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff" />


    <!--<com.google.android.gms.common.SignInButton-->
        <!--android:layout_width="250dp"-->
        <!--android:layout_height="56dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:layout_marginTop="40dp"-->
        <!--android:paddingStart="32dp"-->
        <!--android:paddingEnd="32dp"-->
        <!--android:id="@+id/google_signIn"-->
        <!--android:textSize="19sp">-->

    <!--</com.google.android.gms.common.SignInButton>-->
    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColorHint="#8effffff"
        android:paddingEnd="32dp"
        android:id="@+id/user_email"
        android:background="@drawable/bubble"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:hint="@string/email"
        android:textColor="#ffffff" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="56dp"
        android:paddingEnd="32dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:background="@drawable/bubble"
        android:textColorHint="#8effffff"
        android:gravity="center_vertical"
        android:drawableEnd="@drawable/ic_eye"
        android:paddingStart="32dp"
        android:id="@+id/userpass"
        android:hint="@string/password"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_shape"
        android:gravity="center_vertical"
        android:onClick="onLogin"
        android:layout_marginTop="40dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textColorHint="#8effffff"
        android:textSize="17sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/forgot_password"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="#ffffff" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:weightSum="1">
       <View
           android:id="@+id/line1"
           android:layout_width="120dp"
           android:layout_height="1dp"
           android:background="#fff"
           android:layout_gravity="center"
           />

       <TextView
           android:id="@+id/or"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/or"
           android:textColor="#fff"
           android:textSize="16sp"
           android:layout_marginLeft="60dp"
           android:padding="16dp"

           />

       <View
           android:id="@+id/line2"
           android:layout_width="120dp"
           android:layout_height="1dp"
           android:background="#fff"
           android:layout_gravity="center"
           android:layout_marginLeft="63dp"
           />
   </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_signIn"
        android:layout_width="202dp"
        android:layout_height="41dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:textSize="19sp">

    </com.google.android.gms.common.SignInButton>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/create_account"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:onClick="signUp"
        android:text="Don't have an account?"
        android:textColor="#ffffff" />


</LinearLayout>
